[package]
name = "moirai"
version = "0.1.4"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Async/await job system for game development"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/moirai"
repository = "https://github.com/PsichiX/moirai"
documentation = "https://docs.rs/moirai"
readme = "../../README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
deadlock-trace = []

[dependencies]
intuicio-data = "0.48"
typid = "1"
tracing = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }
